--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -72,3 +72,5 @@ Style/RedundantConstantBase:
   Enabled: False
 Style/BlockComments:
   Enabled: False
+Style/RedundantParentheses:
+  Enabled: False
